--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 80vh;
+  height: 1000px;
 }
 .revolution_wallpaper {
   position: relative;
