--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -44,6 +46,12 @@
 }
 
 .bodini_font {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.stats_font {
   font-family: "Libre Bodoni", serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -82,6 +90,7 @@
   background-repeat: no-repeat;
   background-position: center;
   width: 100%;
+  padding: 140px;
 }
 @media (max-width: 1024px) {
   .hero_wall::after {
@@ -127,10 +136,6 @@
 ::-webkit-scrollbar-thumb {
   background-color: #3aa456;
   border: 2px solid #3aa456;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
 }
 
 .trusted_team_wallpaper {
